# remotix

./: .env.example  .gitignore  ACTUALIZAR.md  DEPLOY.md  INSTALADOR.md  README.md  docker-compose.nginx.yml  docker-compose.yml  start.bat  start.ps1
.claude/: settings.json
agent/: Cargo.toml
agent/src/: account.rs  autostart.rs  capture.rs  chat.rs  config.rs  decode.rs  deskutil.rs  device.rs  encode.rs  files.rs  input.rs  lib.rs  logging.rs  monitors.rs  proto.rs  session.rs  tray.rs  ui.rs  update.rs  viewer.rs  winsvc.rs
agent/tests/: quality_compare.rs
e2e/: .gitignore  agent-e2e-test.mjs  package.json  render-favicon.mjs  screenshots-tv.mjs  screenshots.mjs  viewer-e2e.mjs
infra/: Caddyfile  build-agent.ps1  build-app-installer.ps1  build-installer.ps1  nginx-remotix.conf.example  sign.ps1  turnserver.conf  validate-subscribe.ps1  web.Dockerfile
infra/installer/: remotix-app.iss  remotix.iss
server/: .env.example  .gitignore  Dockerfile  access-smoke.mjs  agent-handshake-test.mjs  bind-smoke.mjs  call-smoke.mjs  chat-smoke.mjs  dedup-smoke.mjs  filechat-smoke.mjs  join-smoke.mjs  package-lock.json  package.json  pcchat-smoke.mjs  remote-smoke.mjs  smoke-ws.mjs  tsconfig.json
server/public/: README.md  remotix-latest.json
server/src/: access.ts  app.ts  env.ts  ids.ts  index.ts  static.ts
server/src/auth/: middleware.ts  password.ts  session.ts
server/src/chat/: hub.ts  service.ts
server/src/db/: index.ts  migrate.ts  schema.ts
web/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
web/src/: App.tsx  styles.css
(+41 files in other folders)
